staging/backend-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nitro-backend
  namespace: staging
spec:
  replicas: 2
  minReadySeconds: 15
  progressDeadlineSeconds: 60
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 1
  #     maxUnavailable: 0
  #   type: RollingUpdate
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-staging-backend
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-staging-backend
      name: "nitro-backend"
    spec:
      containers:
      - env:
        - name: MOCK
          value: "false"
        - name: CLIENT_URI
          valueFrom:
            configMapKeyRef:
              name: staging-web
              key: CLIENT_URI
        - name: GRAPHQL_PORT
          valueFrom:
            configMapKeyRef:
              name: staging-backend
              key: GRAPHQL_PORT
        - name: GRAPHQL_URI
          valueFrom:
            configMapKeyRef:
              name: staging-backend
              key: GRAPHQL_URI
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              name: staging
              key: JWT_SECRET
              optional: false
        - name: NEO4J_URI
          valueFrom:
            configMapKeyRef:
              name: staging-neo4j
              key: NEO4J_URI
        image: humanconnection/nitro-backend:latest
        name: nitro-backend
        ports:
        - containerPort: 4000
        resources: {}
        imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
status: {}
