staging/db-migration-worker-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nitro-db-migration-worker
  namespace: staging
spec:
  replicas: 1
  minReadySeconds: 15
  progressDeadlineSeconds: 60
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-staging-db-migration-worker
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-staging-db-migration-worker
      name: "nitro-db-migration-worker"
    spec:
      containers:
      - env:
        - name: SSH_USERNAME
          valueFrom:
            configMapKeyRef:
              name: staging-db-migration-worker
              key: SSH_USERNAME
        - name: SSH_HOST
          valueFrom:
            configMapKeyRef:
              name: staging-db-migration-worker
              key: SSH_HOST
        - name: MONGODB_USERNAME
          valueFrom:
            configMapKeyRef:
              name: staging-db-migration-worker
              key: MONGODB_USERNAME
        - name: MONGODB_AUTH_DB
          valueFrom:
            configMapKeyRef:
              name: staging-db-migration-worker
              key: MONGODB_AUTH_DB
        - name: MONGODB_DATABASE
          valueFrom:
            configMapKeyRef:
              name: staging-db-migration-worker
              key: MONGODB_DATABASE
        - name: UPLOADS_DIRECTORY
          valueFrom:
            configMapKeyRef:
              name: staging-db-migration-worker
              key: UPLOADS_DIRECTORY
        - name: MONGODB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: staging
              key: MONGODB_PASSWORD
              optional: false
        image: humanconnection/db-migration-worker:latest
        name: nitro-db-migration-worker
        resources: {}
        imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
status: {}
