staging/deployment-neo4j.yaml
---
  apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: nitro-neo4j
    namespace: staging
  spec:
    replicas: 1
    strategy: {}
    selector:
      matchLabels:
        workload.user.cattle.io/workloadselector: deployment-staging-neo4j
    template:
      metadata:
        labels:
          workload.user.cattle.io/workloadselector: deployment-staging-neo4j
        name: nitro-neo4j
      spec:
        containers:
        - name: nitro-db-migration-worker
          image: humanconnection/db-migration-worker:latest
          imagePullPolicy: Always
          volumeMounts:
          - name: secret-volume
            readOnly: false
            mountPath: /root/.ssh
          - name: mongo-export
            mountPath: /mongo-export/
        - name: nitro-neo4j
          image: humanconnection/neo4j:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 7687
          - containerPort: 7474
          volumeMounts:
            - mountPath: /data/
              name: neo4j-data
            - mountPath: /mongo-export/
              name: mongo-export
        volumes:
        - name: secret-volume
          secret:
            secretName: ssh-keys
            defaultMode: 0400
        - name: mongo-export
          persistentVolumeClaim:
            claimName: mongo-export-claim
        - name: neo4j-data
          persistentVolumeClaim:
            claimName: neo4j-data-claim
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
---
  kind: PersistentVolumeClaim
  apiVersion: v1
  metadata:
    name: neo4j-data-claim
    namespace: staging
  spec:
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 4Gi
---
  kind: PersistentVolumeClaim
  apiVersion: v1
  metadata:
    name: mongo-export-claim
    namespace: staging
  spec:
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
