staging/deployment-web.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nitro-web
  namespace: staging
spec:
  replicas: 2
  minReadySeconds: 15
  progressDeadlineSeconds: 60
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-staging-web
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-staging-web
      name: nitro-web
    spec:
      containers:
      - name: web
        image: humanconnection/nitro-web:latest
        ports:
        - containerPort: 3000
        resources: {}
        imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
status: {}
