staging/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nitro-web
  namespace: staging
spec:
  replicas: 2
  minReadySeconds: 15
  progressDeadlineSeconds: 60
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 1
  #     maxUnavailable: 0
  #   type: RollingUpdate
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-staging-web
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-staging-web
      name: nitro-web
    spec:
      containers:
      - env:
        - name: HOST
          value: 0.0.0.0
        - name: BACKEND_URL
          valueFrom:
            configMapKeyRef:
              name: staging-backend
              key: GRAPHQL_URI
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              name: staging
              key: JWT_SECRET
              optional: false
        image: humanconnection/nitro-web:latest
        name: web
        ports:
        - containerPort: 3000
        resources: {}
        imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
status: {}
