staging/neo4j-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/ipAddresses: "null"
    field.cattle.io/targetDnsRecordIds: "null"
    field.cattle.io/targetWorkloadIds: '["deployment:staging:nitro-neo4j"]'
  labels:
    cattle.io/creator: norman
  name: neo4j
  namespace: staging
spec:
  clusterIP: None
  ports:
  - name: default
    port: 42
    protocol: TCP
    targetPort: 42
  selector:
    workloadID_neo4j: "true"
  sessionAffinity: None
  type: ClusterIP
