staging/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nitro-backend
  namespace: staging
  labels:
    workload.user.cattle.io/workloadselector: deployment-staging-backend
spec:
  ports:
    - name: web
      port: 4000
      targetPort: 4000
  selector:
    workload.user.cattle.io/workloadselector: deployment-staging-backend
