staging/service-neo4j.yaml
apiVersion: v1
kind: Service
metadata:
  name: nitro-neo4j
  namespace: staging
  labels:
    workload.user.cattle.io/workloadselector: deployment-staging-neo4j
spec:
  ports:
  - name: bolt
    port: 7687
    targetPort: 7687
  - name: web
    port: 7474
    targetPort: 7474
  selector:
    workload.user.cattle.io/workloadselector: deployment-staging-neo4j
